@@ -2,6 +2,16 @@
 //
 #include "resource.h"
 
+#ifdef HAVE_CONFIG_H
+# include "config.h"
+#elif defined(_WIN32) && !defined(__MINGW32__)
+# include "sdcc_vc.h"
+#else
+# include "sdccconf.h"
+#endif
+
+#include "src/version.h"
+
 #define APSTUDIO_READONLY_SYMBOLS
 /////////////////////////////////////////////////////////////////////////////
 //
@@ -45,6 +55,46 @@ BEGIN
 END
 
 #endif    // APSTUDIO_INVOKED
+
+/////////////////////////////////////////////////////////////////////////////
+//
+// Version
+//
+
+VS_VERSION_INFO VERSIONINFO
+ FILEVERSION    SDCC_VERSION_HI,SDCC_VERSION_LO,SDCC_VERSION_P,SDCC_BUILD_NR
+ PRODUCTVERSION SDCC_VERSION_HI,SDCC_VERSION_LO,SDCC_VERSION_P,SDCC_BUILD_NR
+ FILEFLAGSMASK 0x17L
+#ifdef _DEBUG
+ FILEFLAGS 0x1L
+#else
+ FILEFLAGS 0x0L
+#endif
+ FILEOS 0x4L
+ FILETYPE 0x1L
+ FILESUBTYPE 0x0L
+BEGIN
+    BLOCK "StringFileInfo"
+    BEGIN
+        BLOCK "040904b0"
+        BEGIN
+            VALUE "Comments", "http://sdcc.sourceforge.net/"
+            VALUE "CompanyName", "SDCC"
+            VALUE "FileDescription", "Small Device C Compiler"
+            VALUE "FileVersion", SDCC_VERSION_STR "." SDCC_BUILD_NUMBER
+            VALUE "InternalName", "sdcc"
+            VALUE "LegalCopyright", "Copyright (C) 1995-2011, License GPL"
+            VALUE "License", "GNU Public License (GPL)"
+            VALUE "OriginalFilename", "sdcc.exe"
+            VALUE "ProductName", "Small Device C Compiler"
+            VALUE "ProductVersion", SDCC_VERSION_STR "." SDCC_BUILD_NUMBER
+        END
+    END
+    BLOCK "VarFileInfo"
+    BEGIN
+        VALUE "Translation", 0x409, 1200
+    END
+END
 
 /////////////////////////////////////////////////////////////////////////////
 //
